--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -18,3 +18,6 @@ jobs:
       - shell: bash
         run:
           mvn --batch-mode --update-snapshots package
+        run:
+          cd target && java -jar cicd-0.0.1-SNAPSHOT.jar
+          
