--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,7 +17,5 @@ jobs:
           distribution: 'adopt'
       - shell: bash
         run:
-          mvn --batch-mode --update-snapshots package
-        run:
-          cd target && java -jar cicd-0.0.1-SNAPSHOT.jar
+          mvn --batch-mode --update-snapshots package && cd target && java -jar cicd-0.0.1-SNAPSHOT.jar
           
